reset css, then made adjustments to text formatting

--- a/reset.css
+++ b/reset.css
@@ -15,7 +15,7 @@ h2,
 h3,
 h4,
 h5,
-h6,
+h6
 p,
 blockquote,
 pre,
@@ -90,6 +90,17 @@ video {
     font-size: 100%;
     font: inherit;
     vertical-align: baseline;
+}
+
+/* reset margins of following */
+h1,
+h2,
+h3,
+h4,
+h5,
+h6{
+    margin: 0;
+    padding: 0;
 }
 
 /* HTML5 display-role reset for older browsers */
