--- a/style.css
+++ b/style.css
@@ -40,8 +40,8 @@ h1{
 
 /* overall card layout */
 .card{
-  height: 250px;
-  width: 700px;
+  max-height: 250px;
+  max-width: 700px;
   margin: auto;
   border-radius: 10px;
   /* overflow: hidden; */
@@ -51,8 +51,8 @@ h1{
 .card img{
   height: 250px;
   width: 250px;
-  border-top-left-radius: 10px;
-  border-bottom-left-radius: 10px;
+  border-top-left-radius: inherit;
+  border-bottom-left-radius: inherit;
 
 }
 /* .text-content > *{
@@ -108,34 +108,6 @@ h6{
   margin: auto;
 }
 
-.share-box{
-  position: absolute;
-  background-color:#49556B;
-  border-radius: 10px;
-  height: 38px;
-  width: 168px;
-  top: -48px;
-  left: -68px;
-
-  /* center horizonally and vertically the icons and text */
-  justify-content: center;
-  align-items: center;
-
-}
-.share-box:after{
-  content: " ";
-  position: absolute;
-  height: 0;
-  width: 0;
-  
-  border-left: 8px solid transparent;
-  border-right: 8px solid transparent;
-  border-top: 8px solid #49556B;
-
-  left: calc(50% - 8px);
-  bottom: -8px;
-}
-
 ul{
   /* because this is now a flexbox container, i can do this.. */
   align-items: center;
@@ -156,5 +128,69 @@ li{
 }
 
 .hidden {
-  display:hidden;
+  display: none;
 }
+
+/* give clickable elements cursor */
+a[href],
+input[type='submit'],
+input[type='image'],
+label[for],
+select,
+button,
+.pointer {
+  cursor: pointer;
+}
+
+  @media screen and (min-width: 375px){
+    .share-box:after {
+      content: " ";
+      position: absolute;
+      height: 0;
+      width: 0;
+
+      border-left: 8px solid transparent;
+      border-right: 8px solid transparent;
+      border-top: 8px solid #49556B;
+
+      left: calc(50% - 8px);
+      bottom: -8px;
+    }
+
+    .share-box {
+      position: absolute;
+      background-color: #49556B;
+      border-radius: 10px;
+      height: 38px;
+      width: 168px;
+      /* bottom: 48px; */
+      right: -68px;
+
+      /* center horizonally and vertically the icons and text */
+      justify-content: center;
+      align-items: center;
+    }
+  }
+
+  @media screen and (max-width: 375px) {
+    body{
+      display: initial;
+    }
+    
+    .card {
+      height: auto;
+      display: table;
+    }
+
+    .card > img {
+      width: 100%;
+      height: auto;
+      border-top-left-radius: 0;
+      border-bottom-left-radius: 0;
+    }
+
+
+    .attribution{
+      display: none;
+    }
+  }
