--- a/style.css
+++ b/style.css
@@ -109,6 +109,7 @@ div.person-share {
   left: 0;
   right: 0;
   margin: auto;
+  fill: rgb(110, 128, 152);
 }
 
 ul{
@@ -126,7 +127,7 @@ li{
 }
 .share-box li:first-child{
   color:hsl(212, 23%, 69%);
-  letter-spacing: 0.15em;
+  letter-spacing: 0.3em;
   text-transform: uppercase;
 }
 
@@ -226,4 +227,15 @@ button,
       bottom: 0;
       left: 0;
     }
+    .show-share li{
+      margin: 0 10px;
+    }
+    .show-share .person-share{
+      background-color: rgb(110, 128, 152);
+      margin-right: 42px;
+    }
+    .show-share .person-share svg {
+      fill: #fff;
+    }
+
   }
